--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,24 @@ services:
       POSTGRES_PASSWORD: 123
       POSTGRES_USER: db_user
       POSTGRES_DB: db_name
+      
+    django_gunicorn:
+      volumes:
+        - static:/static
+      env_file:
+        - .env
+      build:
+        context: .
+      ports:
+        - "8000:8000"
+    nginx:
+      build: ./nginx
+      volumes:
+        - static:/static
+      ports:
+        - "80:80"
+      depends_on:
+        - django_gunicorn
 
 
   adminer:
